--- a/arch/arm/dts/imx7d-sdb-u-boot.dtsi
+++ b/arch/arm/dts/imx7d-sdb-u-boot.dtsi
@@ -2,6 +2,14 @@
 
 #include "imx7s-u-boot.dtsi"
 
+/ {
+	wdt-reboot {
+		compatible = "wdt-reboot";
+		wdt = <&wdog1>;
+		bootph-pre-ram;
+	};
+};
+
 &fec2 {
 	status = "disable";
 };
@@ -59,4 +67,8 @@
 			MX7D_PAD_SD1_DATA3__SD1_DATA3		0x5b
 		>;
 	};
+};
+
+&wdog1 {
+	bootph-pre-ram;
 };
