--- a/include/env/ti/ti_common.env
+++ b/include/env/ti/ti_common.env
@@ -32,3 +32,15 @@ bootcmd_ti_mmc=
 	else;
 		run get_kern_${boot}; run get_fdt_${boot}; run get_overlay_${boot}; run run_kern;
 	fi;
+default_device_tree=CONFIG_DEFAULT_DEVICE_TREE
+default_device_tree_arch=ti
+#ifdef CONFIG_ARM64
+findfdt=
+	setenv name_fdt ${default_device_tree_arch}/${default_device_tree}.dtb;
+	setenv fdtfile ${name_fdt}
+#else
+default_device_tree_subarch=omap
+findfdt=
+	setenv name_fdt ${default_device_tree_arch}/${default_device_tree_subarch}/${default_device_tree}.dtb;
+	setenv fdtfile ${name_fdt}
+#endif
