tools: logos: Rename TI logo files
Change the file name from ti.gz and ti.bmp to ti_logos_414x97_32bpp to
help user understand the resolution and identify the logo files when
placed in the boot partition and update the splashfile name with the
same in .env file.

Signed-off-by: Nikhil M Jain <n-jain1@ti.com>
Reviewed-by: Devarsh Thakkar <devarsht@ti.com>

--- a/board/ti/am62x/am62x.env
+++ b/board/ti/am62x/am62x.env
@@ -15,7 +15,7 @@ bootpart=1:2
 bootdir=/boot
 rd_spec=-
 
-splashfile=ti.gz
+splashfile=ti_logo_414x97_32bpp.bmp.gz
 splashimage=0x80200000
 splashpos=m,m
 splashsource=sf
