test: capsule: Generate capsules through config file
Add logic to generate capsules through a config file while testing the
EFI capsule update functionality. Capsule generation through config
file is enabled on the sandbox variant.

Signed-off-by: Sughosh Ganu <sughosh.ganu@linaro.org>

--- a/test/py/tests/test_efi_capsule/capsule_gen_binman.dts
+++ b/test/py/tests/test_efi_capsule/capsule_gen_binman.dts
@@ -54,6 +54,13 @@
 		};
 	};
 
+#ifdef CONFIG_EFI_USE_CAPSULE_CFG_FILE
+	capsule {
+		efi-capsule-cfg-file {
+			cfg-file = "sandbox_capsule_cfg.txt";
+		};
+	};
+#else
 	capsule1 {
 		filename = "Test01";
 		efi-capsule {
@@ -318,4 +325,5 @@
 			};
 		};
 	};
+#endif /* !CONFIG_EFI_USE_CAPSULE_CFG_FILE */
 };
